deploy.mq.rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-rabbit-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prioriza
      kind: mq
  template:
    metadata:
      labels:
        app: prioriza
        kind: mq
    spec:
      containers:
        - name: rabbit-mq
          image: rabbitmq:4.2.4-alpine
          ports:
            - name: http
              containerPort: 5672
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - rabbitmq-diagnostics -q ping
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 2
