deploy.stock.api.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: prioriza
      kind: api
  template:
    metadata:
      labels:
        app: prioriza
        kind: api
    spec:
      containers:
        - name: api
          image: nyyakko/prioriza-stock-api-service:latest
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 2
status: {}
