deploy.stock.worker.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-worker-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: prioriza
      kind: worker
  template:
    metadata:
      labels:
        app: prioriza
        kind: worker
    spec:
      containers:
        - name: worker
          image: nyyakko/prioriza-stock-worker-service:latest
status: {}
