pod.db.redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: prioriza
  labels:
    app: prioriza
    kind: db
spec:
  containers:
    - name: redis
      image: redis:8.6.1-alpine
      ports:
        - name: http
          containerPort: 6379
      livenessProbe:
        exec:
          command:
            - sh
            - -c
            - redis-cli ping
        periodSeconds: 5
        failureThreshold: 3
        timeoutSeconds: 2
