pod.mq.rabbit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbit-mq
  namespace: prioriza
  labels:
    app: prioriza
    kind: mq
spec:
  containers:
    - name: rabbit-mq
      image: rabbitmq:4.2.4-alpine
      ports:
        - name: http
          containerPort: 5672
      livenessProbe:
        exec:
          command:
            - sh
            - -c
            - rabbitmq-diagnostics -q ping
        periodSeconds: 5
        failureThreshold: 3
        timeoutSeconds: 2
