pod.stock.api.service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stock-api-service
  namespace: prioriza
  labels:
    app: prioriza
    kind: api
spec:
  containers:
    - name: api
      image: nyyakko/prioriza-stock-api-service:latest
      ports:
        - name: http
          containerPort: 80
      livenessProbe:
        httpGet:
          path: /health
          port: http
        periodSeconds: 5
        failureThreshold: 3
        timeoutSeconds: 2
