pod.stock.worker.service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stock-worker-service
  namespace: prioriza
  labels:
    app: prioriza
    kind: worker
spec:
  containers:
    - name: worker
      image: nyyakko/prioriza-stock-worker-service:latest
