svc.db.redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-redis-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: prioriza
    kind: db
