svc.mq.rabbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq-rabbit-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: prioriza
    kind: mq
