svc.stock.api.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-api-service
  namespace: prioriza
  labels:
    app: prioriza
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: prioriza
    kind: api
